--- a/tools/template.html
+++ b/tools/template.html
@@ -28,10 +28,12 @@
 <body>
   <nav class="logo"><a href="/">Thoughtscape.</a></nav>
   <main>
-    <h1 class="title">Template</h1>
-    <time>Published: 20XX-01-01</time>
-    <h2 class="subtitle">Subtitle Template</h2>
-    <img src="/assets/images/hello-world.png" />
+    <header>
+      <h1 class="title">Template</h1>
+      <time>Published: 20XX-01-01</time>
+      <h2 class="subtitle">Subtitle Template</h2>
+      <img src="/assets/images/hello-world.png" />
+    </header>
     <section>
       <h2 id="section1" class="section-heading"><a href="#section1">Section 1</a></h2>
       <p>
