pride and other changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Primary Meta Tags -->
-    <title>Thoughtscape • Template</title>
+    <title>Thoughtscape</title>
     <meta name="title" content="Thoughtscape">
     <meta name="description" content="Aiden Shi's Personal Blog.">
 
@@ -23,20 +23,21 @@
     <!-- <meta property="twitter:image" content="/assets/images/hello-world.png"> -->
 
     <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/home.css" />
 </head>
 
 <body>
     <nav class="logo"><a href="/">Thoughtscape.</a></nav>
     <main>
-        <a href="/articles/2021-06-01-hello-world/" class="article">
-            <section>
+        <a href="/articles/2021-06-01-hello-world/" >
+            <section class="article">
                 <h1 class="title">Hello World</h1>
                 <time>Published: 2021-06-01</time>
                 <h3 class="subtitle">Welcome to my new blog.</h3>
                 <img src="/assets/images/hello-world.png" />
             </section>
         </a>
-        <footer>Made with ❤️ by Aiden Shi</footer>
+        <footer>All content is under MIT licence unless stated otherwise</footer>
     </main>
 </body>
 
